# simd-diagonal-load

./: CMakeLists.txt  README.md
src/: .clang-format  CMakeLists.txt  clang-format.sh
src/algorithm/: CMakeLists.txt
src/algorithm/include/simd-diagonal-load/algorithm/: CMakeLists.txt  algorithm_types.h  check_template_parameters.h  create_masks.h  every_other.h  lookup_templates.h  power_of_two.h  simd_diagonal_load.h  typelookup.h  use_blend_masks.h
src/array-helper/: CMakeLists.txt
src/array-helper/include/simd-diagonal-load/array-helper/: CMakeLists.txt  array_helper.h  extract_helper.h  two_to_the_power_of.h
src/cmake/modules/: simd-diagonal-loadConfig.cmake.in
