install(FILES every_other.h
              create_masks.h
              power_of_two.h
              lookup_templates.h
              use_blend_masks.h
              simd_diagonal_load.h
              typelookup.h
              check_template_parameters.h
              algorithm_types.h
        DESTINATION include/simd-diagonal-load/algorithm)
